// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> matches snapshot when collapsed 1`] = `
<SearchInputBase
  debounceTime={0}
  forwardRef={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isExpanded={false}
  isLoading={true}
  onNavigate={[MockFunction]}
  onOpen={[Function]}
  value=""
>
  <ProductSearchInput
    actionSubjectId="jiraIssuesSearchLink"
    advancedSearchURL="/secure/QuickSearch.jspa?searchString="
    collapsedPlaceholder="Search"
    debounceTime={0}
    expandedPlaceholder="Search Jira"
    forwardRef={null}
    isExpanded={false}
    isLoading={true}
    onNavigate={[MockFunction]}
    onOpen={[Function]}
    value=""
  >
    <div
      actionSubjectId="jiraIssuesSearchLink"
      advancedSearchURL="/secure/QuickSearch.jspa?searchString="
      collapsedPlaceholder="Search"
      debounceTime={0}
      expandedPlaceholder="Search Jira"
      forwardRef={null}
      isExpanded={false}
      isLoading={true}
      onNavigate={[MockFunction]}
      onOpen={[Function]}
      value=""
    />
  </ProductSearchInput>
</SearchInputBase>
`;

exports[`<SearchInput /> matches snapshot when expanded 1`] = `
<SearchInputBase
  debounceTime={0}
  forwardRef={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isExpanded={true}
  isLoading={true}
  onNavigate={[MockFunction]}
  onOpen={[Function]}
  value=""
>
  <ProductSearchInput
    actionSubjectId="jiraIssuesSearchLink"
    advancedSearchURL="/secure/QuickSearch.jspa?searchString="
    collapsedPlaceholder="Search"
    debounceTime={0}
    expandedPlaceholder="Search Jira"
    forwardRef={null}
    isExpanded={true}
    isLoading={true}
    onNavigate={[MockFunction]}
    onOpen={[Function]}
    value=""
  >
    <div
      actionSubjectId="jiraIssuesSearchLink"
      advancedSearchURL="/secure/QuickSearch.jspa?searchString="
      collapsedPlaceholder="Search"
      debounceTime={0}
      expandedPlaceholder="Search Jira"
      forwardRef={null}
      isExpanded={true}
      isLoading={true}
      onNavigate={[MockFunction]}
      onOpen={[Function]}
      value=""
    />
  </ProductSearchInput>
</SearchInputBase>
`;
